slideshow fixes.  works in firefox  layout bug fixed in ff

--- a/public/stylesheets/sass/slideshow.scss
+++ b/public/stylesheets/sass/slideshow.scss
@@ -16,7 +16,7 @@
             height: 353px;
         }
         .description {
-            margin: 0 0 5px;
+            margin: 0;
             font-family: helvetica, sans-serif;
             padding: 5px;
             background-color: $background_gray;
